--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,3 +1,10 @@
 FROM php:8.1-fpm
 
 RUN docker-php-ext-install mysqli
+
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
+
+COPY conf.d/* $PHP_INI_DIR/conf.d/
