Modified nginx config to support css/js/image files.

--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -3,12 +3,9 @@ server {
     listen  [::]:80;
     server_name  localhost;
 
+    root           /var/www/html;
+    index          index.php;
     #access_log  /var/log/nginx/host.access.log  main;
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
 
     #error_page  404              /404.html;
 
