Created myuser for php container.

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -8,3 +8,10 @@ RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
 
 COPY conf.d/* $PHP_INI_DIR/conf.d/
+
+RUN groupadd -g 1001 myuser && \
+    useradd -u 1001 -g 1001 -s /bin/bash -m myuser && \
+    usermod -aG sudo myuser && \
+    echo 'myuser:mypass' | chpasswd
+
+USER myuser
